--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/node": "^5.0.0",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "dotenv": "^16.4.7",
     "puppeteer": "^23.11.0",
     "ts-node": "^10.9.2",
     "zod": "^3.24.1"
